# arbys-bignum

./: .clang-format  .gitignore  BigNumbersConfig.cmake.in  CMakeLists.txt  README.md  arbys-bignum-config.cmake.in
include/: bigint.h  bignumber.h
include/arbys/bignum/: big_int.h  errors.h  format.h  results.h
include/arbys/bignumbers/: big_int.h  bigint.h  errors.h  results.h
src/: bigint.cpp  bignumber.cpp
src/arbys/bignum/big_int/: big_int.cpp
src/arbys/bignum/detail/: add_abs.cpp  big_int_internal.h  cmp_abs.cpp  config.h  detail.h  div_abs.cpp  mul_abs.cpp  normalize.cpp  parse_limbs.cpp  sub_abs.cpp
src/arbys/bignumbers/bigint/: add.cpp  big_int.cpp  bigint.cpp  mul.cpp  sub.cpp
src/arbys/bignumbers/detail/: add_abs.cpp  big_int_internal.h  bigint_impl.h  cmp_abs.cpp  config.h  detail.h  div_abs.cpp  mul_abs.cpp  normalize.cpp  parse_limbs.cpp  sub_abs.cpp
src/bigint/: bigint.cpp  cmp.cpp  div.cpp  from_string.cpp  mul.cpp
src/detail/: add_abs.cpp  bigint_impl.h  cmp_abs.cpp  detail.h  mul_abs.cpp  normalize.cpp  parse_digits.cpp  sub_abs.cpp
tests/: CMakeLists.txt  bigint_add_test.cpp  bigint_compare_test.cpp  bigint_from_string_test.cpp  bigint_sub_test.cpp  bignumber_add_test.cpp  bignumber_from_string_test.cpp  bignumber_test.cpp
tests/big_int/: test_add.cpp  test_cmp.cpp  test_div.cpp  test_from_integer.cpp  test_from_string.cpp  test_integration.cpp  test_mul.cpp  test_sub.cpp
tests/bigint/: add_test.cpp  cmp_test.cpp  div_test.cpp  from_string_test.cpp  mul_test.cpp  sub_test.cpp  test_add.cpp  test_cmp.cpp  test_from_integer.cpp  test_from_string.cpp  test_mul.cpp  test_sub.cpp
tests/helpers/: helpers.cpp  helpers.h
